--- a/omniisaacgymenvs/cfg/task/SelfDrivingCar.yaml
+++ b/omniisaacgymenvs/cfg/task/SelfDrivingCar.yaml
@@ -22,6 +22,8 @@ env:
   clipActions: 1.0
   # perform 2 simulation steps for every action (applies actions every 2 simulation steps)
   controlFrequencyInv: 2 # 60 Hz
+  maxSteeringAngle: 45.0
+  maxAcceleration: 10.0
 
 # simulation related parameters
 sim:
