--- a/omniisaacgymenvs/cfg/train/CarPPO.yaml
+++ b/omniisaacgymenvs/cfg/train/CarPPO.yaml
@@ -34,7 +34,7 @@ params:
   load_path: ${...checkpoint} # path to the checkpoint to load
 
   config:
-    name: ${resolve_default:Cartpole,${....experiment}}
+    name: ${resolve_default:Car,${....experiment}}
     full_experiment_name: ${.name}
     device: ${....rl_device}
     device_name: ${....rl_device}
