--- a/omniisaacgymenvs/cfg/task/Car.yaml
+++ b/omniisaacgymenvs/cfg/task/Car.yaml
@@ -26,6 +26,10 @@ env:
   maxSteeringAngle: 45.0
   maxAcceleration: 10.0
 
+  # positions
+  initial_position: [0.0, 0.0, 0.0]
+  aimed_position: [10.0, 0.0, 0.0]
+
 # simulation related parameters
 sim:
   # simulation dt (dt between each simulation step)
@@ -89,7 +93,7 @@ sim:
   # each asset in the task can override physics parameters defined in the scene
   # the name of the asset must match the name of the ArticulationView for the asset in the task
   # additional Articulation and rigid body documentation can be found at https://docs.omniverse.nvidia.com/kit/docs/omni_usd_schema_physics/104.2/class_physx_schema_physx_articulation_a_p_i.html and https://docs.omniverse.nvidia.com/kit/docs/omni_usd_schema_physics/104.2/class_physx_schema_physx_rigid_body_a_p_i.html
-  Car:
+  car:
     # a value of -1 means to use the same values defined in the physics scene
     override_usd_defaults: False
     enable_self_collisions: False
@@ -106,6 +110,7 @@ sim:
     # per-shape
     contact_offset: 0.02
     rest_offset: 0.001
-    #joints
+    # joints
     left_wheel_joint: "WHEEL_JOINT_LEFT"
     right_wheel_joint: "WHEEL_JOINT_RIGHT"
+    
